force-app/main/default/objects/leaseworks__Asset_History__c/leaseworks__Asset_History__c.object-meta.xml
<CustomObject>
    <description>Keep track of asset history like Status changes, dates on which the status change happens, Operator etc.
History Associated with the Asset and Assemblies. Including removal/installations, Deliveries and Returns and etc. This is a place where multiple different history records are stored, therefore
[MODULE: Asset]
[LOAD: Optional]
[PREREQUISITES: Asset or Assembly or Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Asset History Tracking</label>
    <nameField>
        <label>History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>