force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Aircraft_TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_TSN__c</fullName>
    <label>Aircraft TSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>