force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset to which this history record is related to</description>
    <inlineHelpText>Asset (Assembly) to which this history record is related to</inlineHelpText>
    <label>Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipName>Asset_History</relationshipName>
    <type>Lookup</type>
</CustomField>