force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Assembly_CSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_CSN__c</fullName>
    <label>Assembly CSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>