force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <inlineHelpText>Reason regarding the status change.</inlineHelpText>
    <label>Z_Unused_2409_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>