force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Historical_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Historical_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the lease information is not available in LeaseWorks</description>
    <inlineHelpText>Please check this if the lease information is not available in LeaseWorks</inlineHelpText>
    <label>Historical Lease?</label>
    <type>Checkbox</type>
</CustomField>