force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Location__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Location__c</fullName>
    <description>It is used to capture the location of the assembly from install assembly component input by user.</description>
    <inlineHelpText>Location of the assembly</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>