force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__c ,  leaseworks__Lease__r.leaseworks__Operator_New__r.Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator</label>
    <type>Text</type>
</CustomField>