force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Operator_Historical_Leases_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator_Historical_Leases_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operator for historical leases that LeaseWorks doesn&apos;t have history of.</description>
    <inlineHelpText>Operator for the historical lease that LeaseWorks doesn&apos;t have history of</inlineHelpText>
    <label>Operator (Historical Leases)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset History Tracking</relationshipLabel>
    <relationshipName>Asset_History_New</relationshipName>
    <type>Lookup</type>
</CustomField>