force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__RORA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RORA_Received_Date__c</fullName>
    <description>Date on which RORA Received.</description>
    <label>RORA Received Date</label>
    <type>Date</type>
</CustomField>