force-app/main/default/objects/leaseworks__Asset_History__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>Status of the asset</description>
    <inlineHelpText>Status of the asset</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>On Lease</fullName>
            </value>
            <value>
                <fullName>Lease Extension</fullName>
            </value>
            <value>
                <fullName>Lease Termination</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>