force-app/main/default/objects/leaseworks__Asset_History__c/validationRules/leaseworks__Asset_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Asset_must_be_selected</fullName>
    <active>true</active>
    <description>Either the aircraft or the assembly must be selected.</description>
    <errorConditionFormula>AND( ISBLANK(leaseworks__Aircraft__c), ISBLANK(leaseworks__Assembly__c))</errorConditionFormula>
    <errorMessage>Please select the aircraft or the assembly that this history record is related to.</errorMessage>
</ValidationRule>