force-app/main/default/objects/leaseworks__Asset_History__c/validationRules/leaseworks__Choose_lease_if_not_historical.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Choose_lease_if_not_historical</fullName>
    <active>true</active>
    <description>Please choose the lease when On Lease</description>
    <errorConditionFormula>AND(!leaseworks__Historical_Lease__c, OR(TEXT( leaseworks__Status__c )=&#39;On Lease&#39;, TEXT( leaseworks__Status__c )=&#39;Lease Extension&#39;, TEXT( leaseworks__Status__c )=&#39;Lease Termination&#39;), ISBLANK(leaseworks__Lease__c))</errorConditionFormula>
    <errorDisplayField>leaseworks__Lease__c</errorDisplayField>
    <errorMessage>Please choose the lease if this is not a historical lease or check the Historical Lease checkbox.</errorMessage>
</ValidationRule>