force-app/main/default/objects/leaseworks__Asset_History__c/validationRules/leaseworks__Date_cannot_be_futureDt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Date_cannot_be_futureDt</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c == FALSE, $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c == FALSE,leaseworks__Status_Change_Date__c &gt; TODAY(),  OR(ISPICKVAL(leaseworks__Status__c , &apos;Installation&apos;), ISPICKVAL(leaseworks__Status__c , &apos;Removal&apos;) ))</errorConditionFormula>
    <errorMessage>Last Installation / Last Removal Date can not be a future date</errorMessage>
</ValidationRule>