force-app/main/default/objects/leaseworks__Asset_History__c/validationRules/leaseworks__Have_a_status.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Have_a_status</fullName>
    <active>true</active>
    <description>Status should be selected</description>
    <errorConditionFormula>ISBLANK(TEXT( leaseworks__Status__c ))</errorConditionFormula>
    <errorDisplayField>leaseworks__Status__c</errorDisplayField>
    <errorMessage>Please choose a status.</errorMessage>
</ValidationRule>