force-app/main/default/objects/leaseworks__Asset_History__c/validationRules/leaseworks__Lease_End_Date_must_be_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Lease_End_Date_must_be_after_Start_Date</fullName>
    <active>true</active>
    <description>Lease End Date must be after Start Date</description>
    <errorConditionFormula>leaseworks__Lease_Start_Date_Historical__c &gt;  leaseworks__Lease_End_Date_Historical__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Lease_End_Date_Historical__c</errorDisplayField>
    <errorMessage>Lease End Date must be after Start Date.</errorMessage>
</ValidationRule>